Fixed scrollbars

--- a/public/resources/css/custom.css
+++ b/public/resources/css/custom.css
@@ -98,13 +98,6 @@ main {
     /* Adjust to the height of the footer */
 }
 
-.custom-scrollbar {
-    /*Hide default scrollbar*/
-    scrollbar-width: none;
-    /* Firefox */
-    -ms-overflow-style: none;
-    /* IE/Edge */
-}
 
 /* Scrollbar style*/
 .custom-scrollbar::-webkit-scrollbar {
@@ -113,7 +106,7 @@ main {
 }
 
 .custom-scrollbar::-webkit-scrollbar-track {
-    background-color: rgba(21, 18, 28, 0.5);
+    /*background-color: rgba(21, 18, 28, 0.5);*/
     /* Track color */
 }
 
@@ -162,6 +155,8 @@ body {
     background-size: 200% 200%;
     background-image: linear-gradient(0deg,  #2d1f42, #13102a);
     animation: gradient 10s ease-in-out infinite;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* IE/Edge *
 }
 
 .modal-content {
@@ -190,3 +185,25 @@ body {
 .popover-header {
     border-bottom: none;
 }
+
+/*body::-webkit-scrollbar {*/
+/*    width: 12px; !* Set width of the scrollbar *!*/
+/*}*/
+
+/*body::-webkit-scrollbar-track {*/
+/*    background: var(--primary-color); !* Track color *!*/
+/*}*/
+
+/*body::-webkit-scrollbar-thumb {*/
+/*    background: var(--tertiary-color); !* Thumb color *!*/
+/*    border-radius: 10px; !* Rounded corners *!*/
+/*}*/
+
+/*body::-webkit-scrollbar-thumb:hover {*/
+/*    background: var(--highlight-color); !* Thumb color on hover *!*/
+/*}*/
+
+/*body::-webkit-scrollbar-thumb:active {*/
+/*    background: var(--hover-highlight-color); !* Thumb color on active *!*/
+/*}*/
+
